TASK-265 AdminService 코드 커버리지 95 달성